[package]
name = "yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homedir = "0.2.1"
rand = "0.8.5"
seahorse = "2.2.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tinyget = { version = "1.0.1", features = ["https"] }
