[package]
name = "yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
homedir = "0.2.1"
image = "^0.24"
inquire = "0.7.5"
pad = "0.1.6"
rand = "0.8.5"
seahorse = "2.2.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tinyget = { version = "1.0.1", features = ["https"] }
viuer = "0.7.1"
